# cms

./: .gitignore  docker-compose.yml  sdd-cms-backend-fastapi.md
backend/: .env  .env.example  .gitignore  REDMIN.md  alembic.ini  pyproject.toml
backend/.claude/skills/playwright-trace/: DEPS.list  traceSnapshot.ts
backend/app/: main.py
backend/app/application/auth/: ports.py  role_use_cases.py  schemas.py  use_cases.py
backend/app/application/posts/: ports.py  schemas.py  use_cases.py
backend/app/application/tags/: ports.py  schemas.py  use_cases.py
backend/app/core/: config.py  exceptions.py  logging.py  pagination.py  security.py
backend/app/domain/auth/: entities.py  exceptions.py  permissions.py
backend/app/domain/posts/: entities.py  exceptions.py
backend/app/domain/tags/: entities.py  exceptions.py
backend/app/infrastructure/arq/: jobs.py  worker.py
backend/app/infrastructure/minio/: __init__.py  client.py  storage.py
backend/app/infrastructure/mongodb/: client.py
backend/app/infrastructure/postgres/: database.py  models.py  seed.py
backend/app/infrastructure/redis/: client.py
backend/app/middlewares/: request_context.py  request_time.py
backend/app/presentation/http/: dependencies.py  error_handlers.py
backend/docs/: [1]_Setup_do_projeto__Poetry,_estrutura_de_pastas,_FastAPI_base_e_configurações.md  [2]_PostgreSQL__modelos,_repositórios_e_migrations_(Alembic).md  [7]_Upload_seguro_de_imagens_com_MinIO.md
backend/scripts/: create_superuser.py  e2e_validate.py
backend/tests/: conftest.py
backend/tests/factories/: factories.py
(+101 files in other folders)
